<resources>
    <string name="app_name">Music Player</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_lib_text">Your Library</string>
    <string name="nav_search_text">Search</string>

    <string name="title_songs">Songs</string>
    <string name="song_card_desc">Song Image</string>
    <string name="song_card_name">Song Name</string>
    <string name="song_card_artists">Artist 1, Artist 2</string>
    <string name="play_button_desc">Play or Pause the song</string>
    <string name="skip_prev_btn_desc">Skip to prev song</string>
    <string name="skip_next_btn_desc">Skip to next song</string>
    <string name="player_song_name">Some Song Name</string>
    <string name="player_artists">Artist 1, Artist 2, Artist 3</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="progress_loading_songs">Loading Songs</string>
    <string name="shuffle_btn_description">Button to toggle Shuffle Playlist</string>
    <string name="loop_btn_description">Button to loop playlist, current song or stop looping</string>
    <string name="play_speed">%sx</string>
    <string name="default_play_speed">1x</string>
    <string name="dialog_speed_title">Select Player Speed</string>
    <string name="dialog_speed_name">Normal</string>
    <string name="close_dialog">Cancel</string>
    <string name="ok_dialog">OK</string>
</resources>