<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_900">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_speed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dialog_speed_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:textColor="@color/white" />

            <com.google.android.material.slider.Slider
                android:id="@+id/dialog_speed_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:stepSize="0.25"
                android:value="0.25"
                android:valueFrom="0.25"
                android:valueTo="2.00"
                app:thumbColor="@color/green"
                app:trackColorActive="@color/green"
                app:trackColorInactive="@color/gray" />

            <TextView
                android:id="@+id/dialog_speed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_speed_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
                android:textColor="@color/green"
                android:textSize="20sp"
                tools:text="Normal" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_speed_btn_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/close_dialog"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/dialog_speed_btn_ok"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/ok_dialog"
                    android:textColor="@color/green" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>